[package]
name = "rust_explore_printpdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# do not compress PDF streams, useful for debugging
less-optimization = []
# enables logging
logging = ["log"]
# enables image support with some basic formats
embedded_images = ["image"]
# enables extra image formats
ico = ["image/ico", "embedded_images"]
tga = ["image/tga", "embedded_images"]
hdr = ["image/hdr", "embedded_images"]
jpeg_rayon = ["image/jpeg_rayon", "embedded_images"]
dxt = ["image/dxt", "embedded_images"]
dds = ["image/dds", "embedded_images"]
webp = ["image/webp", "embedded_images"]
# enables svg
svg = ["svg2pdf", "usvg", "pdf-writer"]
#font_subsetting = ["dep:allsorts"]


[dependencies]
# minimum dependencies
lopdf = { version = "0.31.0", default-features = false, features = [
    "pom_parser",
] }
owned_ttf_parser = { version = "0.12", default-features = false }
time = { version = "0.3.25", default-features = false, features = ["std"] }
# optional: logging
log = { version = "0.4.8", optional = true }
# image reading (png / jpeg)
image = { version = "0.24.3", optional = true, default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "pnm",
    "tiff",
    "bmp",
] }
# svg support (svg -> pdf xobject)
svg2pdf = { version = "0.1.0", optional = true }
pdf-writer = { version = "0.4.1", optional = true }
usvg = { version = "0.19.0", optional = true }
allsorts = { version = "0.14", optional = true, default-features = false, features = ["flate2_rust"]  }

[[example]]
name = "bookmark"
required-features = []

[[example]]
name = "circle"
required-features = []

[[example]]
name = "font"
required-features = []

[[example]]
name = "image"
required-features = ["embedded_images"]

[[example]]
name = "no_icc"
required-features = []

[[example]]
name = "page"
required-features = []

[[example]]
name = "shape"
required-features = []

[[example]]
name = "svg"
required-features = ["svg"]

[[example]]
name = "annotations"
required-features = []

[[example]]
name = "hyperlink"
required-features = ["annotations"]
